--- a/index.html
+++ b/index.html
@@ -3,9 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
     <title>Sanemiento Ambiental</title>
+
+    <!-- ============== REMIXICON ============== -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css" rel="stylesheet" />
+
+    <!--=============== SWIPER CSS ===============-->
+        <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    
+    <!-- ============== HEADER ============== -->
+    <header class="header" id="header">
+        <nav class="nav container">
+            <a href="#home" class="nav__logo">
+                <img src="img/logo.png" alt="image" />
+            </a>
+            <div class="nav__menu" id="nav-menu">
+                <ul class="nav__list">
+                    <li>
+                        <a href="#home" class="nav__link active-link">Inicio</a>
+                    </li>
+                    <li>
+                        <a href="#about" class="nav__link">Nosotros</a>
+                    </li>
+                    <li>
+                        <a href="#service" class="nav__link">Servicios</a>
+                    </li>
+                    <li>
+                        <a href="#contact" class="nav__link">Contacto</a>
+                    </li>
+                </ul>
+                <!-- Close button -->
+                <div class="nav__close" id="nav-close">
+                    <i class="ri-close-large-line"></i>
+                </div>
+            </div>
+            <!-- Toggle button -->
+            <div class="nav__toggle" id="nav-toggle">
+                <i class="ri-menu-2-line"></i>
+            </div>
+        </nav>
+    </header>
+    <!-- ===== BANNER ===== -->
+    <section class="banner" id="home">
+        <article class="banner-slide active">
+            <img src="img/img-banner.png" alt="Saneamiento ambiental" class="banner-img">
+            <div class="banner-content slider-banner">
+                <h2 class="banner-title">
+                <span>SANEAMIENTO</span> <strong>AMBIENTAL</strong>
+                </h2>
+                <p class="banner-text">Garantizamos la calidad y eficiencia en nuestros trabajos</p>
+                <button class="btn-banner">Ver Servicio</button>
+            </div>
+        </article>
+        <article class="banner-slide">
+            <img src="img/banner-clean.png" alt="Control de plagas" class="banner-img">
+            <div class="banner-content">
+                <h2 class="banner-title">
+                <span>SERVICIOS DE</span> <strong>LIMPIEZA</strong>
+                </h2>
+                <p class="banner-text">Perfeccionamos métodos de limpieza para cuidar sus espacios de trabajo</p>
+                <button class="btn-banner">Ver Servicio</button>
+            </div>
+        </article>
+        <article class="banner-slide">
+            <img src="img/banner-cleanwindow.png" alt="Desinfección profesional" class="banner-img">
+            <div class="banner-content">
+                <h2 class="banner-title">
+                <span>LIMPIEZA EN</span> <strong>ALTURA</strong>
+                </h2>
+                <p class="banner-text">Cuidamos tu imagen al más mínimo detalle, dejaremos su fachada reluciente</p>
+                <button class="btn-banner">Ver Servicio</button>
+            </div>
+        </article>
+        <!-- Botones de control -->
+        <button class="banner-btn-next prev">&#10094;</button>
+        <button class="banner-btn-next next">&#10095;</button>
+    </section>
+    <section class="about-us section" id="about">
+        <figure class="about-us-image">
+            <img src="img/about-us.jpg" alt="Personal de limpieza con traje" />
+        </figure>
+        <div class="about-us-content">
+            <h1>Empresa de Limpieza y Saneamiento Ambiental</h1>
+            <p>
+                Más de 14 años de experiencia brindando soluciones de limpieza… 
+            </p>
+            <p>
+                Ecotechservices es líder en saneamiento ambiental y gestión integral de 
+                instalaciones. Brinda servicios a sectores como petróleo, minería, energía, 
+                construcción, banca, agroindustria y alimentos. Con presencia a nivel nacional, 
+                ofrece productos y servicios de excelente calidad.
+            </p>
+            <p>
+                Un equipo humano comprometido garantiza soluciones rápidas, seguras y con calidad.
+            </p>
+            <a href="#" class="about-us-button" role="button">Conócenos</a>
+        </div>
+    </section>
+
+    <!--=============== SWIPER JS ===============-->
+    <script src="js/scrollreveal.min.js" defer></script>
+    <script src="js/main.js" defer></script>
 </body>
 </html>
