--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
     </header>
     <!-- ===== BANNER ===== -->
     <section class="banner" id="home">
-        <article class="banner-slide active">
-            <img src="img/img-banner.png" alt="Saneamiento ambiental" class="banner-img">
-            <div class="banner-content slider-banner">
+        <article class="banner-slide">
+            <img src="img/banner-clean.png" alt="Control de plagas" class="banner-img">
+            <div class="banner-content">
                 <h2 class="banner-title">
-                <span>SANEAMIENTO</span> <strong>AMBIENTAL</strong>
+                <span>SANEAMIENTO <br></span> <strong>AMBIENTAL</strong>
                 </h2>
-                <p class="banner-text">Garantizamos la calidad y eficiencia en nuestros trabajos</p>
+                <p class="banner-text">Garantizamos la calidad y eficiencia en nuestros trabajo con nuestro servicio</p>
                 <button class="btn-banner">Ver Servicio</button>
             </div>
         </article>
@@ -62,7 +62,7 @@
             <img src="img/banner-clean.png" alt="Control de plagas" class="banner-img">
             <div class="banner-content">
                 <h2 class="banner-title">
-                <span>SERVICIOS DE</span> <strong>LIMPIEZA</strong>
+                <span>SERVICIOS DE<br></span> <strong>LIMPIEZA</strong>
                 </h2>
                 <p class="banner-text">Perfeccionamos métodos de limpieza para cuidar sus espacios de trabajo</p>
                 <button class="btn-banner">Ver Servicio</button>
@@ -72,7 +72,7 @@
             <img src="img/banner-cleanwindow.png" alt="Desinfección profesional" class="banner-img">
             <div class="banner-content">
                 <h2 class="banner-title">
-                <span>LIMPIEZA EN</span> <strong>ALTURA</strong>
+                <span>LIMPIEZA EN<br></span> <strong>ALTURA</strong>
                 </h2>
                 <p class="banner-text">Cuidamos tu imagen al más mínimo detalle, dejaremos su fachada reluciente</p>
                 <button class="btn-banner">Ver Servicio</button>
@@ -192,7 +192,7 @@
                 <button class="button-next">&#10095;</button>
             </div>
     </section>
-    <section class="services-sec section bg-grey">
+    <section class="services-sec section bg-serv">
         <div class="container-service">
             <div class="title-heading">
                 <h2 class="mb-48 fs-title">Servicios que puedes contratar en una empresa de Limpieza</h2>
@@ -258,63 +258,121 @@
     <section class="testimonials">
         <div class="container-testimonials">
             <h2>Nuestros clientes <span>opinan</span></h2>
-            <div class="testimonial-cards">
-                <!-- CARD 1 -->
-                <article class="testimonial-card">
-                    <div class="quote-icon">
-                        <img src="img/quotes.png" alt="">
-                    </div>
-                    <div class="testimonial-header">
-                        <div class="client-logo"></div>
-                        <div class="client-info">
-                            <h3>CinePlanet</h3>
-                            <p>Cadena de Cine</p>
+            <div class="testimonial-slider-track">
+                <div class="testimonial-cards">
+                    <!-- CARD 1 -->
+                    <article class="testimonial-card">
+                        <div class="quote-icon">
+                            <img src="img/quotes.png" alt="">
                         </div>
-                    </div>
-                    <div class="testimonial-text">
-                        <p>
-                            “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”
-                        </p>
-                    </div>
-                    <div class="testimonial-footer">
-                        <div class="stars">
-                            <i class="bx bxs-star"></i>
-                            <i class="bx bxs-star"></i>
-                            <i class="bx bxs-star"></i>
-                            <i class="bx bxs-star"></i>
-                            <i class="bx bxs-star"></i>
+                        <div class="testimonial-header">
+                            <div class="client-logo"></div>
+                            <div class="client-info">
+                                <h3>CinePlanet</h3>
+                                <p>Cadena de Cine</p>
+                            </div>
                         </div>
-                        <span class="testimonial-date">Enero, 2025</span>
-                    </div>
-                </article>
-                <!-- CARD 2 -->
-                <article class="testimonial-card">
-                    <div class="quote-icon">
-                        <img src="img/quotes.png" alt="">
-                    </div>
-                    <div class="testimonial-header">
-                        <div class="client-logo"></div>
-                        <div class="client-info">
-                            <h3>Sepcon</h3>
-                            <p>Oficinas de empresa</p>
+                        <div class="testimonial-text">
+                            <p>
+                                “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”
+                            </p>
                         </div>
-                    </div>
-                    <div class="testimonial-text">
-                        <p>
-                            “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”
-                        </p>
-                    </div>
-                    <div class="testimonial-footer">
-                        <div class="stars">
-                            <i class="bx bxs-star"></i>
-                            <i class="bx bxs-star"></i>
-                            <i class="bx bxs-star"></i>
-                            <i class="bx bxs-star"></i>
-                            <i class="bx bxs-star"></i>
+                        <div class="testimonial-footer">
+                            <div class="stars">
+                                <i class="bx bxs-star"></i>
+                                <i class="bx bxs-star"></i>
+                                <i class="bx bxs-star"></i>
+                                <i class="bx bxs-star"></i>
+                                <i class="bx bxs-star"></i>
+                            </div>
+                            <span class="testimonial-date">Enero, 2025</span>
                         </div>
-                        <span class="testimonial-date">Enero, 2025</span>
-                    </div>
-                </article>
+                    </article>
+                    <!-- CARD 2 -->
+                    <article class="testimonial-card">
+                        <div class="quote-icon">
+                            <img src="img/quotes.png" alt="">
+                        </div>
+                        <div class="testimonial-header">
+                            <div class="client-logo"></div>
+                            <div class="client-info">
+                                <h3>Sepcon</h3>
+                                <p>Oficinas de empresa</p>
+                            </div>
+                        </div>
+                        <div class="testimonial-text">
+                            <p>
+                                “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”
+                            </p>
+                        </div>
+                        <div class="testimonial-footer">
+                            <div class="stars">
+                                <i class="bx bxs-star"></i>
+                                <i class="bx bxs-star"></i>
+                                <i class="bx bxs-star"></i>
+                                <i class="bx bxs-star"></i>
+                                <i class="bx bxs-star"></i>
+                            </div>
+                            <span class="testimonial-date">Enero, 2025</span>
+                        </div>
+                    </article>
+                    <!-- CARD 2 -->
+                    <article class="testimonial-card">
+                        <div class="quote-icon">
+                            <img src="img/quotes.png" alt="">
+                        </div>
+                        <div class="testimonial-header">
+                            <div class="client-logo"></div>
+                            <div class="client-info">
+                                <h3>Sepcon</h3>
+                                <p>Oficinas de empresa</p>
+                            </div>
+                        </div>
+                        <div class="testimonial-text">
+                            <p>
+                                “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”
+                            </p>
+                        </div>
+                        <div class="testimonial-footer">
+                            <div class="stars">
+                                <i class="bx bxs-star"></i>
+                                <i class="bx bxs-star"></i>
+                                <i class="bx bxs-star"></i>
+                                <i class="bx bxs-star"></i>
+                                <i class="bx bxs-star"></i>
+                            </div>
+                            <span class="testimonial-date">Enero, 2025</span>
+                        </div>
+                    </article>
+                    <!-- CARD 2 -->
+                    <article class="testimonial-card">
+                        <div class="quote-icon">
+                            <img src="img/quotes.png" alt="">
+                        </div>
+                        <div class="testimonial-header">
+                            <div class="client-logo"></div>
+                            <div class="client-info">
+                                <h3>Sepcon</h3>
+                                <p>Oficinas de empresa</p>
+                            </div>
+                        </div>
+                        <div class="testimonial-text">
+                            <p>
+                                “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”
+                            </p>
+                        </div>
+                        <div class="testimonial-footer">
+                            <div class="stars">
+                                <i class="bx bxs-star"></i>
+                                <i class="bx bxs-star"></i>
+                                <i class="bx bxs-star"></i>
+                                <i class="bx bxs-star"></i>
+                                <i class="bx bxs-star"></i>
+                            </div>
+                            <span class="testimonial-date">Enero, 2025</span>
+                        </div>
+                    </article>
+                </div>
             </div>
         </div>
     </section>
