finalitty for today

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
-    <title>Sanemiento Ambiental</title>
+    <title>EcoTechServices</title>
 
     <!-- ============== REMIXICON ============== -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css" rel="stylesheet" />
@@ -26,13 +26,13 @@
                         <a href="#home" class="nav__link active-link">Inicio</a>
                     </li>
                     <li>
-                        <a href="#about" class="nav__link">Nosotros</a>
+                        <a href="nosotros.html#about" class="nav__link">Nosotros</a>
                     </li>
                     <li>
-                        <a href="#servis" class="nav__link">Servicios</a>
+                        <a href="servicio.html#servs" class="nav__link">Servicios</a>
                     </li>
                     <li>
-                        <a href="#contact" class="nav__link">Contacto</a>
+                        <a href="contacto.html#contact" class="nav__link">Contacto</a>
                     </li>
                 </ul>
                 <!-- Close button -->
@@ -49,13 +49,13 @@
     <!-- ===== BANNER ===== -->
     <section class="banner" id="home">
         <article class="banner-slide">
-            <img src="img/banner-clean.png" alt="Control de plagas" class="banner-img">
+            <img src="img/img-banner.png" alt="Control de plagas" class="banner-img">
             <div class="banner-content">
                 <h2 class="banner-title">
                 <span>SANEAMIENTO <br></span> <strong>AMBIENTAL</strong>
                 </h2>
                 <p class="banner-text">Garantizamos la calidad y eficiencia en nuestros trabajo con nuestro servicio</p>
-                <button class="btn-banner">Ver Servicio</button>
+                <a href="servicio.html"><button class="btn-banner">Ver Servicio</button></a>
             </div>
         </article>
         <article class="banner-slide">
@@ -65,7 +65,7 @@
                 <span>SERVICIOS DE<br></span> <strong>LIMPIEZA</strong>
                 </h2>
                 <p class="banner-text">Perfeccionamos métodos de limpieza para cuidar sus espacios de trabajo</p>
-                <button class="btn-banner">Ver Servicio</button>
+                <a href="servicio.html"><button class="btn-banner">Ver Servicio</button></a>
             </div>
         </article>
         <article class="banner-slide">
@@ -75,7 +75,7 @@
                 <span>LIMPIEZA EN<br></span> <strong>ALTURA</strong>
                 </h2>
                 <p class="banner-text">Cuidamos tu imagen al más mínimo detalle, dejaremos su fachada reluciente</p>
-                <button class="btn-banner">Ver Servicio</button>
+                <a href="servicio.html"><button class="btn-banner">Ver Servicio</button></a>
             </div>
         </article>
         <!-- Botones de control -->
@@ -90,22 +90,25 @@
             <div class="about-us-content">
                 <h1>Empresa de Limpieza y Saneamiento Ambiental</h1>
                 <p>
-                    Más de 14 años de experiencia brindando soluciones de limpieza… 
-                </p>
-                <p>
-                    Ecotechservices es líder en saneamiento ambiental y gestión integral de 
-                    instalaciones. Brinda servicios a sectores como petróleo, minería, energía, 
-                    construcción, banca, agroindustria y alimentos. Con presencia a nivel nacional, 
-                    ofrece productos y servicios de excelente calidad.
+                    Ecotechservices es una empresa líder en saneamiento ambiental
+                    y gestión integral de instalaciones que brinda servicios a
+                    empresas ligadas a la industria petrolera, minera, energía,
+                    construcción, administrativas, bancarias, agroindustria e
+                    industrias alimentarias brindando a todas estas servicios y
+                    productos de excelente calidad.
+                    Estamos presente a NIVEL NACIONAL. Todo esto sumado a su
+                    gran equipo humano capacitado y comprometido nos ha
+                    permitido atender las necesidades de todos nuestros clientes a
+                    lo largo y ancho del territorio nacional.
                 </p>
                 <p>
                     Un equipo humano comprometido garantiza soluciones rápidas, seguras y con calidad.
                 </p>
-                <a href="#" class="about-us-button" role="button">Conócenos</a>
+                <a href="nosotros.html" class="about-us-button" role="button">Conócenos</a>
             </div>
         </div>
     </section>
-    <section class="services-sec section" id="servis">
+    <section class="services-sec section" id="servs">
         <div class="container-services">
             <div class="title-heading">
                 <h2 class="mb-48">Sectores que <span>atendemos</span></h2>
@@ -117,74 +120,98 @@
                         <!-- CARD 1 -->
                         <article class="sector-card">
                             <a href="" class="card-img image-effect">
-                                <img src="img/about-us.jpg" alt="Limpieza de lunas" />
+                                <img src="img/serv1.png" alt="Limpieza de lunas" />
                             </a>
                             <div class="sector-inf">
-                                <h3>Limpieza de lunas y fachadas en altura</h3>
+                                <h3>Limpieza integral de toda clase de instalaciones</h3>
                                 <a href="">Ver Más <span>+</span></a>
                             </div>
                             <div class="account">
-                                <p>Servicio especializado con equipos seguros y personal capacitado.</p>
+                                <p>Limpieza completa de todo tipo de instalaciones  para mantener tus espacios impecables y seguros.</p>
                             </div>
                         </article>
                         <article class="sector-card">
                             <a href="" class="card-img image-effect">
-                                <img src="img/about-us.jpg" alt="Limpieza de lunas" />
+                                <img src="img/serv2.png" alt="Limpieza de lunas" />
                             </a>
                             <div class="sector-inf">
                                 <h3>Limpieza de lunas y fachadas en altura</h3>
                                 <a href="">Ver Más <span>+</span></a>
                             </div>
                             <div class="account">
-                                <p>Servicio especializado con equipos seguros y personal capacitado.</p>
+                                <p>Limpieza de lunas y fachadas en altura con equipos seguros y personal capacitado.</p>
                             </div>
                         </article>
                         <article class="sector-card">
                             <a href="" class="card-img image-effect">
-                                <img src="img/about-us.jpg" alt="Limpieza de lunas" />
+                                <img src="img/serv3.png" alt="Limpieza de lunas" />
                             </a>
                             <div class="sector-inf">
-                                <h3>Limpieza de lunas y fachadas en altura</h3>
+                                <h3>Saneamiento ambiental y control integral de plagas</h3>
                                 <a href="">Ver Más <span>+</span></a>
                             </div>
                             <div class="account">
-                                <p>Servicio especializado con equipos seguros y personal capacitado.</p>
+                                <p>Protegemos tus espacios con servicios de control de plagas y limpieza certificados.</p>
                             </div>
                         </article>
                         <article class="sector-card">
                             <a href="" class="card-img image-effect">
-                                <img src="img/about-us.jpg" alt="Limpieza de lunas" />
+                                <img src="img/serv4.png" alt="Limpieza de lunas" />
                             </a>
                             <div class="sector-inf">
-                                <h3>Limpieza de lunas y fachadas en altura</h3>
+                                <h3>Desinfección profesional de instalaciones</h3>
                                 <a href="">Ver Más <span>+</span></a>
                             </div>
                             <div class="account">
-                                <p>Servicio especializado con equipos seguros y personal capacitado.</p>
+                                <p>Desinfección efectiva para proteger la salud en centros administrativos y hospitalarios.</p>
                             </div>
                         </article>
                         <article class="sector-card">
                             <a href="" class="card-img image-effect">
-                                <img src="img/about-us.jpg" alt="Limpieza de lunas" />
+                                <img src="img/serv5.png" alt="Limpieza de lunas" />
                             </a>
                             <div class="sector-inf">
-                                <h3>Limpieza de lunas y fachadas en altura</h3>
+                                <h3>Desinsectación con nitrógeno líquido</h3>
                                 <a href="">Ver Más <span>+</span></a>
                             </div>
                             <div class="account">
-                                <p>Servicio especializado con equipos seguros y personal capacitado.</p>
+                                <p>Solución innovadora en desinsectación con frío extremo efectiva segura y sin contaminantes.</p>
                             </div>
                         </article>
                         <article class="sector-card">
                             <a href="" class="card-img image-effect">
-                                <img src="img/about-us.jpg" alt="Limpieza de lunas" />
+                                <img src="img/serv6.png" alt="Limpieza de lunas" />
                             </a>
                             <div class="sector-inf">
-                                <h3>Limpieza de lunas y fachadas en altura</h3>
+                                <h3>Desratización <br><br></h3>
                                 <a href="">Ver Más <span>+</span></a>
                             </div>
                             <div class="account">
-                                <p>Servicio especializado con equipos seguros y personal capacitado.</p>
+                                <p>Servicio de desratización eficaz y seguro eliminamos roedores con métodos certificados.</p>
+                            </div>
+                        </article>
+                        <article class="sector-card">
+                            <a href="" class="card-img image-effect">
+                                <img src="img/serv7.png" alt="Limpieza de lunas" />
+                            </a>
+                            <div class="sector-inf">
+                                <h3>Limpieza y desinfección de reservorios de agua</h3>
+                                <a href="">Ver Más <span>+</span></a>
+                            </div>
+                            <div class="account">
+                                <p>Limpieza de reservorios y tanques con productos certificados y personal experto.</p>
+                            </div>
+                        </article>
+                        <article class="sector-card">
+                            <a href="" class="card-img image-effect">
+                                <img src="img/serv8.png" alt="Limpieza de lunas" />
+                            </a>
+                            <div class="sector-inf">
+                                <h3>Limpieza de trampas de grasa y pozos sépticos</h3>
+                                <a href="">Ver Más <span>+</span></a>
+                            </div>
+                            <div class="account">
+                                <p>Mantenimiento integral de trampas y pozos para prevenir obstrucciones y malos olores.</p>
                             </div>
                         </article>
                     </div>
@@ -215,8 +242,8 @@
                         <img src="img/about-us.jpg" alt="">
                     </figure>
                     <div class="sect-inf">
-                        <h3>Servicios <span><br>de limpieza</span></h3>
-                        <p>Comprende la limpieza <br> integral de ambientes</p>
+                        <h3>Saneamiento <span><br>ambiental</span></h3>
+                        <p>Eliminamos todo tipo<br>de insectos</p>
                         <button>Ver Servicios</button>
                     </div>
                 </article>
@@ -226,8 +253,8 @@
                         <img src="img/about-us.jpg" alt="">
                     </figure>
                     <div class="sect-inf">
-                        <h3>Servicios <span><br>de limpieza</span></h3>
-                        <p>Comprende la limpieza <br> integral de ambientes</p>
+                        <h3>Servicios <span><br>generales</span></h3>
+                        <p>Controlamos el deterioro<br>de las instalaciones</p>
                         <button>Ver Servicios</button>
                     </div>
                 </article>
@@ -237,14 +264,14 @@
                         <img src="img/about-us.jpg" alt="">
                     </figure>
                     <div class="sect-inf">
-                        <h3>Servicios <span><br>de limpieza</span></h3>
-                        <p>Comprende la limpieza <br> integral de ambientes</p>
+                        <h3>Servicios <span><br>complementarios</span></h3>
+                        <p>Mejoramos la gestión<br>operativa de procesos</p>
                         <button>Ver Servicios</button>
                     </div>
                 </article>
             </div>
             <div class="service-btn">
-                <button><i class='bx bx-envelope'></i> Contáctate con nosotros</button>
+                <a href="contacto.html"><button><i class='bx bx-envelope'></i> Contáctate con nosotros</button></a>
             </div>
         </div>
     </section>
@@ -252,7 +279,7 @@
         <div class="overlay"></div>
         <div class="banner-contact">
             <h2>¡Reserve ahora para una limpieza <br> brillante como nunca antes!</h2>
-            <a href="#contacto" class="btn-contact">Contáctanos <i class='bx bx-right-arrow-alt'></i></a>
+            <a href="contacto.html" class="btn-contact">Contáctanos <i class='bx bx-right-arrow-alt'></i></a>
         </div>
     </section>
     <section class="testimonials">
@@ -497,7 +524,7 @@
                     <div class="sectors-track">
                         <!-- CARD 1 -->
                         <article class="sector-card">
-                            <a href="" class="card-img image-effect">
+                            <a class="card-img image-effect">
                                 <img src="img/about-us.jpg" alt="Limpieza de lunas" />
                             </a>
                             <div class="sector-inf">
@@ -506,7 +533,7 @@
                             </div>
                         </article>
                         <article class="sector-card">
-                            <a href="" class="card-img image-effect">
+                            <a class="card-img image-effect">
                                 <img src="img/about-us.jpg" alt="Limpieza de lunas" />
                             </a>
                             <div class="sector-inf">
@@ -515,7 +542,7 @@
                             </div>
                         </article>
                         <article class="sector-card">
-                            <a href="" class="card-img image-effect">
+                            <a class="card-img image-effect">
                                 <img src="img/about-us.jpg" alt="Limpieza de lunas" />
                             </a>
                             <div class="sector-inf">
@@ -524,7 +551,7 @@
                             </div>
                         </article>
                         <article class="sector-card">
-                            <a href="" class="card-img image-effect">
+                            <a class="card-img image-effect">
                                 <img src="img/about-us.jpg" alt="Limpieza de lunas" />
                             </a>
                             <div class="sector-inf">
@@ -533,7 +560,7 @@
                             </div>
                         </article>
                         <article class="sector-card">
-                            <a href="" class="card-img image-effect">
+                            <a class="card-img image-effect">
                                 <img src="img/about-us.jpg" alt="Limpieza de lunas" />
                             </a>
                             <div class="sector-inf">
@@ -542,7 +569,7 @@
                             </div>
                         </article>
                         <article class="sector-card">
-                            <a href="" class="card-img image-effect">
+                            <a class="card-img image-effect">
                                 <img src="img/about-us.jpg" alt="Limpieza de lunas" />
                             </a>
                             <div class="sector-inf">
