--- a/index.html
+++ b/index.html
@@ -90,16 +90,17 @@
             <div class="about-us-content">
                 <h1>Empresa de Limpieza y Saneamiento Ambiental</h1>
                 <p>
-                    Ecotechservices es una empresa líder en saneamiento ambiental
-                    y gestión integral de instalaciones que brinda servicios a
-                    empresas ligadas a la industria petrolera, minera, energía,
-                    construcción, administrativas, bancarias, agroindustria e
-                    industrias alimentarias brindando a todas estas servicios y
-                    productos de excelente calidad.
-                    Estamos presente a NIVEL NACIONAL. Todo esto sumado a su
-                    gran equipo humano capacitado y comprometido nos ha
-                    permitido atender las necesidades de todos nuestros clientes a
-                    lo largo y ancho del territorio nacional.
+                ECOTECH SERVICES S.A.C somos una empresa que realiza trabajos 
+                de saneamiento ambiental como desinsectación, desinfección, desratización, 
+                limpieza de reservorios de agua, limpieza de fachadas en altura y limpieza de 
+                ambientes en general; buscando siempre la satisfacción de nuestros clientes a 
+                través del cumplimiento de sus requisitos y aplicando una efectiva gestión de 
+                calidad, seguridad y respeto al medio ambiente.
+                <br><br>
+                ECOTECH, está conformada por un equipo multidisciplinario, de ingenieros, biólogos 
+                y técnicos capacitados específicamente en el rubro en el que nos desarrollamos, con 
+                amplia experiencia en cada una de las actividades que realizamos, el cual nos ha 
+                permitido el respaldo y confianza de nuestros grupos de interés.
                 </p>
                 <p>
                     Un equipo humano comprometido garantiza soluciones rápidas, seguras y con calidad.
@@ -490,7 +491,18 @@
                         <div class="carousel-item">
                             <img src="img/company-5.png" alt="Seucon" class="brand-logo">
                         </div>
-                        
+                        <div class="carousel-item">
+                            <img src="img/company-6.png" alt="PeruMasivo" class="brand-logo carousel-wt">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/company-7.png" alt="Connei" class="brand-logo carousel-wt">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/company-8.png" alt="Proysa" class="brand-logo carousel-wt">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/company-9.png" alt="Bbva" class="brand-logo carousel-wt">
+                        </div>
                         <!-- Clonados para efecto infinito -->
                         <div class="carousel-item">
                             <img src="img/company-2.png" alt="Cineplanet" class="brand-logo">
@@ -506,6 +518,18 @@
                         </div>
                         <div class="carousel-item">
                             <img src="img/company-5.png" alt="Seucon" class="brand-logo">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/company-6.png" alt="PeruMasivo" class="brand-logo carousel-wt">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/company-7.png" alt="Connei" class="brand-logo carousel-wt">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/company-8.png" alt="Proysa" class="brand-logo carousel-wt">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/company-9.png" alt="Bbva" class="brand-logo carousel-wt">
                         </div>
                     </div>
                 </div>
@@ -589,7 +613,7 @@
                     <h2>EcoTechServices</h2>
                     <p>Soluciones en saneamiento ambiental con responsabilidad y confianza.</p>
                     <div class="contact-info">
-                        <span><i class='bx bxs-phone'></i>+51 949197827</span>
+                        <span><i class='bx bxs-phone'></i>+51 922776631</span>
                     </div>
                     <h3 style="margin-top: 15px">Redes Sociales</h3>
                     <div class="social-links">
@@ -610,10 +634,10 @@
                     <h3>Contacto</h3>
                     <p>Calle. Nevado Sara Sara Nro. 115, San Miguel - Lima</p>
                     <div class="contact-info">
-                        <span><i class='bx bxs-phone'></i>+51 949197827</span>
+                        <span><i class='bx bxs-phone'></i>+51 922776631</span>
                     </div>
                     <div class="contact-info">
-                        <span><i class='bx bxs-envelope' ></i> comercial@ecotechperu.com</span>
+                        <span><i class='bx bxs-envelope' ></i>comercial2ecotechperu@gmail.com</span>
                     </div>
                 </div>                  
                 <div class="footer-section form-inbox">
